Minor bug fixes

--- a/config.json
+++ b/config.json
@@ -1,4 +1,6 @@
 {
   "prefix": "~",
-  "activity": "in Beta | ~help | Formerly AntBot"
+  "activity": "in Beta | ~help | Formerly AntBot",
+  "token": "NTI2MjU2MjE0NjYxNzkxNzY2.DwCjQA.U7k1Y5yQnGYaa5dL_WQpvNEjOXM",
+  "youtube": "AIzaSyAvn4GrfD4uw0aGWduoJCl5rm0fZiIrcno"
 }
