--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express-handlebars": "^3.0.0",
     "fs": "^0.0.1-security",
     "opusscript": "^0.0.6",
+    "parse-time": "^0.1.4",
     "simple-youtube-api": "^5.1.1",
     "ytdl-core": "^0.28.3"
   },
